# pai-cp02-stig4

./: .env.example  README.md  pyproject.toml  test_ollama.py
data/: examples.json  inputs.json
output/: resultados.csv
prompts/: system_prompts.json  templates.json
src/pai_cp02_stig4/: evaluator.py  llm_client.py  main.py  prompt_builder.py  report.py  tasks.py  techniques.py
